# vamng

./: .dockerignore  .gitignore  .oxfmtrc.json  Dockerfile  LICENSE.md  README.md  composer.json  docker-compose.prod.yml  docker-compose.yml  eslint.config.js  package.json  phpstan.neon  pint.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  rector.php
.github/workflows/: lint.yml  tests.yml
app/Concerns/: CreateUserValidationRules.php  PasswordValidationRules.php  ProfileValidationRules.php
app/Enums/: AircraftTypeEnum.php  RouteTypeEnum.php
app/Models/: Aircraft.php  AircraftType.php  Airport.php  Rank.php  Route.php  User.php
app/Policies/: AirportPolicy.php  RankPolicy.php  RolePolicy.php  UserPolicy.php
app/Providers/: AppServiceProvider.php  FortifyServiceProvider.php
app/Settings/: GeneralSettings.php
apps/api/: urls.py
apps/core/: admin.py  models.py
apps/operations/: admin.py  filters.py  helpers.py  models.py  urls.py  views.py
apps/pireps/: apps.py  models.py  signals.py
apps/users/: admin.py  forms.py  models.py  signals.py  urls.py  utils.py  views.py
config/: countries.php  filament-shield.php  settings.php  settings.py  urls.py
data/: airports.csv
database/factories/: RankFactory.php  UserFactory.php
database/migrations/: 2026_04_28_140319_create_permission_tables.php  2026_05_01_121429_create_airports_table.php  2026_05_02_125328_setup_countries_table.php  2026_05_02_125329_optimize_countries_table.php  (+4 more)
nginx/: Dockerfile  nginx.conf
routes/: web.php
static/: app.css
templates/: _base.html  home.html
(+196 files in other folders)
