[project]
name = "vamng"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "argon2-cffi==25.1.0",
    "django>=6.0.2",
    "django-countries>=8.2.0",
    "gunicorn==25.1.0",
    "psycopg[binary]>=3.3.3",
    "python-dotenv==1.2.1",
    "uvicorn==0.41.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
    "ty>=0.0.18",
]
