[project]
name = "vamng"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "argon2-cffi==25.1.0",
    "django>=6.0.2",
    "django-countries>=8.2.0",
    "django-filter>=25.2",
    "gunicorn==25.1.0",
    "psycopg[binary]>=3.3.3",
    "pytest-django==4.12.0",
    "python-dotenv==1.2.2",
    "uvicorn==0.41.0",
]

[dependency-groups]
dev = [
    "ruff>=0.15.2",
    "ty>=0.0.18",
]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
